<resources>
    <string name="app_name">MyLogin</string>
    <string name="logo_app">Logo App</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="fullName">FullName</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="have_account">Have account?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">Developer</string>

    <string name="home_second">Home Second</string>
</resources>
