<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sign_in"
    tools:context=".view.SignUp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logotext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="19.7dp"
        android:contentDescription="@string/logo_app" />

    <Button
        android:id="@+id/btn_loginFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:background="@drawable/btn_fb"
        android:layout_centerHorizontal="true"/>

    <customfonts.MyTextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="12sp"
        android:layout_below="@id/btn_loginFb"
        android:layout_centerInParent="true"
        android:padding="8dp"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/or">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#a9aaac"
            app:hintTextColor="#ea495f">

            <customfonts.MyEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableStart="@drawable/ic_person_24px"
                android:drawablePadding="16dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="14dp"
                android:textColor="#404547"
                android:textColorHint="#76818a"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#ea495f"/>

        <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            app:passwordToggleContentDescription="show"
            app:passwordToggleDrawable="@drawable/state_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#a9aaac"
            app:hintTextColor="#ea495f"
            android:layout_marginTop="5dp">

            <customfonts.MyEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:maxLines="1"
                android:textColorHint="#76818a"
                android:textColor="#404547"
                android:background="#0000"
                android:padding="14dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock_24px"
                android:drawablePadding="16dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#ea495f"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColorHint="#a9aaac"
            app:hintTextColor="#ea495f">

            <customfonts.MyEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableStart="@drawable/ic_email_24px"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="14dp"
                android:textColor="#404547"
                android:textColorHint="#76818a" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#ea495f" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:textColorHint="#a9aaac"
            app:hintTextColor="#ea495f">

            <customfonts.MyEditText
                android:id="@+id/edt_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableStart="@drawable/ic_call_24px"
                android:drawablePadding="16dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLines="1"
                android:padding="14dp"
                android:textColor="#404547"
                android:textColorHint="#76818a" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#ea495f" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:textColorHint="#a9aaac"
            app:hintTextColor="#ea495f">

            <customfonts.MyEditText
                android:id="@+id/edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableStart="@drawable/ic_fullname_24px"
                android:drawablePadding="16dp"
                android:hint="@string/fullName"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="14dp"
                android:textColor="#404547"
                android:textColorHint="#76818a" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginBottom="20dp"
            android:background="#ea495f" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:background="@drawable/btn_sign_up"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_createAccount"
        android:orientation="horizontal"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:layout_marginBottom="32dp">

        <customfonts.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textSize="12sp"/>

        <customfonts.MyTextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="12sp"
            android:textColor="#ea495f"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>